Replace LinkedObjectPool with ArrayObjectPool for better performance
Replace LinkedObjectPool with ArrayObjectPool for better performance. Updated NoGCTest for improved metrics and removed unused GitHub Maven CI workflow.